--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -38,7 +38,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 separator=false
-markup=pango
+#markup=pango
 
 #[Weather]
 #command=~/.config/i3/scripts/openweather
@@ -83,7 +83,7 @@ color=#717171
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=
+label= 
 instance=/
 command=~/.config/i3/scripts/disk
 interval=30
@@ -172,7 +172,7 @@ command=~/.config/i3/scripts/ppd-status
 interval=5
 
 [shutdown_menu]
-full_text=
+full_text= 
 command=~/.config/i3/scripts/powermenu
 
 #[simple-2]
