--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -56,7 +56,7 @@ interval=1
 [terminal]
 full_text= 
 color=#807dfe
-command=i3-msg -q exec kitty vim ./Documents
+command=i3-msg -q exec kitty tmux
 
 [browser]
 full_text= 
