--- a/i3/config
+++ b/i3/config
@@ -24,7 +24,7 @@
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango: Noto Sans Regular 10
+font pango: Noto Sans Regular 14
 
 # set the mod key to the winkey:
 set $mod Mod4
@@ -295,6 +295,7 @@ bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
 ## App shortcuts
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
 bindsym $mod+n exec --no-startup-id /usr/bin/thunar
+bindsym $mod+o exec --no-startup-id /usr/bin/chromium
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshots/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/Pictures/Screentshots$(date +"%Y-%m-%d-%T")-screenshot.png"
 
 
@@ -333,6 +334,7 @@ assign [class="kitty"] $ws1
 assign [class="(?i)firefox"] $ws2
 assign [class="Thunar"] $ws3
 assign [class="thunderbird"] $ws4
+assign [class="obs"] $ws4
 assign [class="TelegramDesktop"] $ws5
 
 # automatic set focus new window if it opens on another workspace than the current:
@@ -340,7 +342,7 @@ for_window [class=kitty] focus
 for_window [class=(?i)firefox] focus
 for_window [class=Thunar] focus
 for_window [class=Thunderbird] focus
-for_window [class=TelegramDesktop] focus
+for_window [class=obs] focus
 
 ##############
 # compositor #
@@ -403,7 +405,7 @@ exec_always --no-startup-id conky
 exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
- exec --no-startup-id sleep 1 && nitrogen --restore
+exec --no-startup-id sleep 1 && nitrogen --restore
 #exec --no-startup-id sleep 1 && feh --bg-fill /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
 
 # set powersavings for display:
@@ -440,6 +442,9 @@ exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id sleep 5 && firefox
 exec --no-startup-id sleep 3 && thunar
 exec --no-startup-id sleep 2 && kitty tmux
+#exec --no-startup-id sleep 8 && obs
+#exec --no-startup-id sleep 8 && thunderbird
+
 
 #bluethoth
 #exec --no-startup-id systemctl start bluetooth.service
@@ -492,7 +497,7 @@ for_window [class="urxvt"] border pixel 1
 ######################################
 
 # Define colors variables:
-set $darkbluetrans	#08052b11
+set $darkbluetrans	#08052b10
 set $darkblue		#08052b
 set $lightblue		#5294e2
 set $urgentred		#e53935
@@ -533,7 +538,7 @@ bar {
 # any workspace that has a name of the form
 # “[n][:][NAME]” will display only the name.
 strip_workspace_numbers yes
-strip_workspace_name yes
+strip_workspace_name no
 
 		    colors {
 		    separator          $purple
@@ -579,7 +584,7 @@ strip_workspace_name yes
 #}
 
 # polybar
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+##exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 
 
@@ -634,6 +639,8 @@ bindsym $mod+Shift+a mode "$mode_system"
 bindsym $mod+F4  exec --no-startup-id $Locker && systemctl suspend, mode "default"
 bindsym $mod+F5  exec --no-startup-id systemctl poweroff -i, mode "default"
 bindsym $mod+F6  exec --no-startup-id systemctl reboot , mode "default"
+bindsym $mod+F3 exec --no-startup-id i3-msg exit, mode "default"
+
 
 exec --no-startup-id picom -b -f 
 
