--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -50,28 +50,28 @@ separator=false
 [time]
 #label=
 command=date '+%a %d %b %I:%M:%p'
-interval=1
+interval=5
+# separator_block_width
 
+#[terminal]
+#full_text= 
+#color=#807dfe
+#command=i3-msg -q exec kitty tmux
 
-[terminal]
-full_text= 
-color=#807dfe
-command=i3-msg -q exec kitty tmux
+#[browser]
+#full_text= 
+#color=#ff7f81
+#command=i3-msg -q exec firefox
 
-[browser]
-full_text= 
-color=#ff7f81
-command=i3-msg -q exec firefox
-
-[files]
-full_text= 
-color=#7f3fbf
-command=i3-msg -q exec thunar ~/Downloads
-
-[mail]
-full_text= 
-color=#dbcb75
-command=i3-msg -q exec thunderbird
+#[files]
+#full_text= 
+#color=#7f3fbf
+#command=i3-msg -q exec thunar ~/Downloads
+#
+#[mail]
+#full_text= 
+#color=#dbcb75
+#command=i3-msg -q exec thunderbird
 
 [simple-2]
 full_text=: :
@@ -94,18 +94,18 @@ interval=30
 [memory]
 label= 
 command=~/.config/i3/scripts/memory
-interval=2
+interval=1
 
 [cpu_usage]
 label= 
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
-interval=2
+interval=1
 
-[CPU-temperature]
-label=
-command=~/.config/i3/scripts/temperature
-interval=30
+#[CPU-temperature]
+#label=
+#command=~/.config/i3/scripts/temperature
+#interval=30
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
@@ -118,17 +118,17 @@ interval=30
 #command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 #interval=30
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+#[bandwidth]
+#command=~/.config/i3/scripts/bandwidth2
+#interval=persist
 
 # Battery indicator
 #[battery]
 #command=~/.config/i3/scripts/battery2
 # for alternative battery script  change to battery1
 # change this to battery-pinebook-pro if you are running on pinebook-pro
-label=
-interval=30
+#label=
+#interval=30
 
 [simple-2]
 full_text=: :
