--- a/i3/config
+++ b/i3/config
@@ -210,7 +210,7 @@ bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
 
 ## App shortcuts
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
-bindsym $mod+n exec --no-startup-id /usr/bin/thunar
+bindsym $mod+n exec --no-startup-id thunar Downloads
 bindsym $mod+o exec --no-startup-id /usr/bin/chromium
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshots/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/Pictures/Screentshots$(date +"%Y-%m-%d-%T")-screenshot.png"
 
@@ -225,40 +225,37 @@ bindsym $mod+Shift+p exec --no-startup-id ~/.config/i3/scripts/power-profiles
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:"
-set $ws2 "2:"
-set $ws3 "3:"
-set $ws4 "4:"
-set $ws5 "5:"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+# Workspace names with emojis
+set $ws1 "1:"    
+set $ws2 "2:"     
+set $ws3 "3:"   
+set $ws4 "4:"    
+set $ws5 "5:"    
+set $ws6 "6:"    
+set $ws7 "7:"    
+set $ws8 "8:"    
+set $ws9 "9:"     
+set $ws10 "10:"  
 
-# use workspaces on different displays:
-# where you have to replace VGA-0/HDMI-0 with the names for your displays
-# you can get from xrandr command
-#workspace $ws1 output VGA-0
-#workspace $ws2 output VGA-0
-#workspace $ws3 output HDMI-0
-#workspace $ws4 output HDMI-0
-#workspace $ws5 output HDMI-0
-
-# bind program to workspace and focus to them on startup:
+# Assign specific applications to workspaces
 assign [class="kitty"] $ws1
 assign [class="(?i)firefox"] $ws2
 assign [class="Thunar"] $ws3
-assign [class="thunderbird"] $ws4
-assign [class="obs"] $ws4
+assign [class="Thunderbird"] $ws4
 assign [class="TelegramDesktop"] $ws5
+assign [class="obs"] $ws6
 
-# automatic set focus new window if it opens on another workspace than the current:
-for_window [class=kitty] focus
-for_window [class=(?i)firefox] focus
-for_window [class=Thunar] focus
-for_window [class=Thunderbird] focus
-for_window [class=obs] focus
+# Catch-all assignment for other applications
+assign [class=".*"] $ws7
+
+# Automatic set focus for new windows if they open on another workspace than the current
+for_window [class="kitty"] focus
+for_window [class="(?i)firefox"] focus
+for_window [class="Thunar"] focus
+for_window [class="Thunderbird"] focus
+for_window [class="TelegramDesktop"] focus
+for_window [class="obs"] focus
+for_window [class="chromium"] focus
 
 ##############
 # compositor #
