--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -163,7 +163,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.75;
+inactive-opacity = 1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -177,7 +177,7 @@ frame-opacity = 0.5;
 inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.8;
+active-opacity = 1;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -226,13 +226,13 @@ opacity-rule = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = "dual_kawase"
-# blur-size = 12
+ blur-size = 12
 #
 # blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
 #
-# blur-background = true;
+ blur-background = true;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
